--- a/un_geneva_design_system.info.yml
+++ b/un_geneva_design_system.info.yml
@@ -3,6 +3,16 @@ type: theme
 description: Theme using Storybook and component-driven development
 base theme: stable9
 core_version_requirement: ^9 || ^10
+dependencies:
+  - block_class
+  - components
+  - emulsify_twig
+  - lang_dropdown
+  - language
+  - menu_block
+  - search
+  - twig_tweak
+  - unified_twig_ext
 libraries:
   - un_geneva_design_system/global
 ckeditor_stylesheets:
