--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "drupal-theme",
     "homepage": "http://emulsify.info",
     "license": "GPL-2.0-only",
+    "version": "1.0.1",
     "authors": [
       {
         "name": "Brian Lewis",
@@ -31,7 +32,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
+        "drupal/block_class": "*",
         "drupal/components": "^2.1",
-        "drupal/emulsify_twig": "^2.0"
+        "drupal/emulsify_twig": "^2.0",
+        "drupal/lang_dropdown": "*",
+        "drupal/language": "*",
+        "drupal/menu_block": "*",
+        "drupal/search": "*",
+        "drupal/unified_twig_ext": "*"
     }
 }
