Update library for equal height boxes for 2&3 columns

--- a/un_geneva_design_system.libraries.yml
+++ b/un_geneva_design_system.libraries.yml
@@ -21,9 +21,9 @@ showcases:
   dependencies:
     - core/drupal
 
-two-columns-paragraph:
+equal-height-cols:
   js:
-    dist/js/03-organisms/paragraphs/paragraph--un-columns-two/paragraph--un-columns-two.js: {}
+    dist/js/03-organisms/paragraphs/equal-height-cols.js: {}
   dependencies:
     - core/drupal
     - core/jquery
