--- a/components/02-molecules/menus/social/social-menu.yml
+++ b/components/02-molecules/menus/social/social-menu.yml
@@ -1,10 +1,10 @@
 social_menu_items:
   - title: 'Twitter'
     url: '#'
-    icon: 'twitter'
+    icon: 'fa-square-x-twitter'
   - title: 'Facebook'
     url: '#'
-    icon: 'facebook'
+    icon: 'fa-facebook-square'
   - title: 'Instagram'
     url: '#'
-    icon: 'instagram'
+    icon: 'fa-instagram'
