--- a/components/03-organisms/site/site-footer/site-footer.yml
+++ b/components/03-organisms/site/site-footer/site-footer.yml
@@ -1,15 +1,13 @@
-ownership_menu:
+footer_menu:
   - url: '#'
     title: 'Terms of Use'
   - url: '#'
     title: 'Privacy Notice'
   - url: '#'
     title: 'Multilingualism Disclaimer'
-extra_footer_menu:
   - url: '#'
     title: 'Services Operating Hours'
   - url: '#'
     title: 'Frequently Asked Questions'
-accessibility_menu:
   - url:  '#'
     title': 'Accesibility'
