Remove fontawesome from bundled css, replace home icon with svg

--- a/components/02-molecules/menus/social/social-menu.yml
+++ b/components/02-molecules/menus/social/social-menu.yml
@@ -1,7 +1,7 @@
-social_menu_items:
+items:
   - title: 'Twitter'
     url: '#'
-    icon: 'fa-square-x-twitter'
+    icon: 'fa-twitter'
   - title: 'Facebook'
     url: '#'
     icon: 'fa-facebook-square'
