--- a/components/03-organisms/site/site-footer/site-footer.yml
+++ b/components/03-organisms/site/site-footer/site-footer.yml
@@ -1,5 +1,7 @@
 footer_menu:
   - url: '#'
+    title: 'Contact'
+  - url: '#'
     title: 'Terms of Use'
   - url: '#'
     title: 'Privacy Notice'
@@ -8,6 +10,23 @@ footer_menu:
   - url: '#'
     title: 'Services Operating Hours'
   - url: '#'
-    title: 'Frequently Asked Questions'
-  - url:  '#'
-    title': 'Accesibility'
+    title: 'FAQ'
+social_menu:
+  - title: 'Twitter'
+    url: '#'
+    icon: 'fa-twitter'
+  - title: 'Facebook'
+    url: '#'
+    icon: 'fa-facebook-square'
+  - title: 'Instagram'
+    url: '#'
+    icon: 'fa-instagram'
+  - title: 'Twitter'
+    url: '#'
+    icon: 'fa-twitter'
+  - title: 'Facebook'
+    url: '#'
+    icon: 'fa-facebook-square'
+  - title: 'Instagram'
+    url: '#'
+    icon: 'fa-instagram'
