--- a/un_geneva_design_system.info.yml
+++ b/un_geneva_design_system.info.yml
@@ -23,7 +23,8 @@ regions:
   content: Content
   sidebar: Sidebar
   content: 'Content Bottom'
-  footer: Footer
+  footer_social: 'Footer Social'
+  footer_menu: 'Footer Menu'
   block_reference_region: 'Block Reference Region (Hidden)'
 logo: images/logo.png
 components:
