New footer fixes

--- a/components/03-organisms/site/site-footer/site-footer.yml
+++ b/components/03-organisms/site/site-footer/site-footer.yml
@@ -14,18 +14,18 @@ footer_menu:
 social_menu:
   - title: 'Twitter'
     url: '#'
-    icon: 'fa-twitter'
+    icon: 'fa fa-twitter'
   - title: 'Facebook'
     url: '#'
-    icon: 'fa-facebook-square'
+    icon: 'fa fa-facebook-square'
   - title: 'Instagram'
     url: '#'
-    icon: 'fa-instagram'
+    icon: 'fa fa-instagram'
   - title: 'Twitter'
     url: '#'
   - title: 'Facebook'
     url: '#'
-    icon: 'fa-facebook-square'
+    icon: 'fa fa-facebook-square'
   - title: 'Instagram'
     url: '#'
-    icon: 'fa-instagram'
+    icon: 'fa fa-instagram'
