Replace placeimg.com service with picsum.photos

--- a/components/02-molecules/link-item/link-item~image.yml
+++ b/components/02-molecules/link-item/link-item~image.yml
@@ -1,4 +1,4 @@
 link_uri: http://example.org
 link_title: Example text link with image
 extra: Example text description
-image: 'https://placeimg.com/220/220/nature'
+image: 'https://picsum.photos/220/220'
