--- a/components/02-molecules/card/card.yml
+++ b/components/02-molecules/card/card.yml
@@ -1,7 +1,7 @@
 # Image
 card_img_modifiers:
 card_img_blockname:
-card_img_src: "https://placeimg.com/1280/720/nature"
+card_img_src: "https://picsum.photos/1280/720"
 card_img_alt: "This is the card image's alt text"
 card_image_output_image_tag: TRUE
 
