--- a/components/02-molecules/link-item/link-item~organization.yml
+++ b/components/02-molecules/link-item/link-item~organization.yml
@@ -1,5 +1,5 @@
 link_uri: http://example.org
 link_title: Example organization link
 link_display: organization
-image: 'https://placeimg.com/300/100/nature'
+image: 'https://picsum.photos/300/100'
 extra: '<a href="http://example.org"><i class="fa fa-external-link"></i> Visit website</a>'
