Default empty alt tag for images + featured media component markup update

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,6 +16,7 @@ globals:
   it: true
   describe: true
   Drupal: true
+  jQuery: true
 parser: "@babel/eslint-parser"
 parserOptions:
   requireConfigFile: false
