UNOGWEB-923 : Replaced png logo with SVG

--- a/components/02-molecules/menus/main-menu/main-menu.yml
+++ b/components/02-molecules/menus/main-menu/main-menu.yml
@@ -1,7 +1,7 @@
 menu_items:
   - title: 'About'
     url: '#'
-    description: '<p>Learn more about our work and the UN presence in Geneva</p><p><img src="logo.png"/></p>'
+    description: '<p>Learn more about our work and the UN presence in Geneva</p><p><img src="logo.svg"/></p>'
     below:
       - title: 'Who we are'
         url: '#'
