--- a/themes/un_geneva_starterkit/un_geneva_starterkit.info.yml
+++ b/themes/un_geneva_starterkit/un_geneva_starterkit.info.yml
@@ -25,6 +25,6 @@ regions:
   footer_social: 'Footer Social'
   footer_menu: 'Footer Menu'
   block_reference_region: 'Block Reference Region (Hidden)'
-logo: images/logo.png
+logo: images/logo.svg
 starterkit: true
 version: 1.0.1
