--- a/un_geneva_design_system.info.yml
+++ b/un_geneva_design_system.info.yml
@@ -26,7 +26,7 @@ regions:
   footer_social: 'Footer Social'
   footer_menu: 'Footer Menu'
   block_reference_region: 'Block Reference Region (Hidden)'
-logo: images/logo.png
+logo: images/logo.svg
 components:
   namespaces:
     base:
