Layout template preprocess variables update + meeting list component

--- a/components/03-organisms/un-listings/un-listings.yml
+++ b/components/03-organisms/un-listings/un-listings.yml
@@ -3,3 +3,4 @@ type: '<a href="" class="room">Room XXIII</a>'
 title: 'HRC/Expert mechanism on the rights of indigenous peoples'
 body: 'Implement UNDRIP on Religious Freedoms, FPIC, land and water'
 extra: '<i class="fa fa-lock"></i>'
+attributes: 'class="un-listings-box"'
