Meeting list component update

--- a/components/03-organisms/meeting-list/meeting-list.yml
+++ b/components/03-organisms/meeting-list/meeting-list.yml
@@ -9,3 +9,9 @@ link: '#listen'
 attributes: 'class="meeting-list-item"'
 audio: 'English, French, Spanish, Russian, Chinese, Arabic'
 transcripts: 'English, French, Spanish, Russian, Chinese, Arabic'
+time_icon: 'fa fa-clock-o'
+date_icon: 'fa fa-calendar'
+location_icon: 'fa fa-map-marker'
+audio_icon: 'fa fa-headphones'
+transcripts_icon: 'fa fa-file-text'
+private_icon: 'fa fa-lock'
