--- a/.ddev/commands/web/build
+++ b/.ddev/commands/web/build
@@ -2,4 +2,4 @@
 ## Description: Run npm commands inside theme.
 ## Usage: build
 ## Example: "npm install or npm rebuild node-sass or npm run build or npm run watch"
-npm install && npm run build
+npm ci && npm run build
